fix: popup width + position and alignment

--- a/src/pages/DeckDetail/style.module.scss
+++ b/src/pages/DeckDetail/style.module.scss
@@ -53,12 +53,18 @@
 .description_popup {
 	position: absolute;
 	width: 100%;
+	max-width: 500px;
 	top: 35px;
 	background: colors.$lightblue;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 20px;
 	z-index: vars.$popup;
 	padding: 17px;
+
+	@include breakpoints.s {
+		top: 40px;
+		right: 0;
+	}
 
 	p {
 		word-break: break-word;
